@@ -48,7 +48,7 @@ case "${2}" in
    up)
       if [ "$(ip addr show ${1} 2>/dev/null | grep ${IP}/)" = "" ]; then
          
-         # Cosmetic output not needed for multiple services
+         # Cosmetic output 
          if ! $(echo ${SERVICE} | grep -q " "); then 
            log_info_msg2 "\n" # Terminate the previous message
          fi
