@@ -8,7 +8,7 @@
 #               Kevin P. Fleming - kpfleming@linuxfromscratch.org
 # Update      : Bruce Dubbs - bdubbs@linuxfromscratch.org
 #
-# Version     : LFS 7.2
+# Version     : LFS 7.7
 #
 # Notes       : The IFCONFIG variable is passed to the SERVICE script
 #               in the /lib/services directory, to indicate what file the
@@ -33,7 +33,7 @@ up()
   fi
 }
 
-RELEASE="7.2"
+RELEASE="7.7"
 
 USAGE="Usage: $0 [ -hV ] [--help] [--version] interface"
 VERSTR="LFS ifup, version ${RELEASE}"
@@ -89,8 +89,7 @@ fi
 # Do not process this service if started by boot, and ONBOOT
 # is not set to yes
 if [ "${IN_BOOT}" = "1" -a "${ONBOOT}" != "yes" ]; then
-   log_info_msg2 "skipped"
-   echo
+   log_skip_msg
    exit 0
 fi
 
@@ -103,6 +102,8 @@ for S in ${SERVICE}; do
     exit 1
   fi
 done
+
+if [ "${SERVICE}" = "wpa" ]; then log_success_msg; fi
 
 # Create/configure the interface
 for S in ${SERVICE}; do 
@@ -126,7 +127,7 @@ fi
 # Set the route default gateway if requested
 if [ -n "${GATEWAY}" ]; then
    if ip route | grep -q default; then
-      log_warning_msg "\nGateway already setup; skipping."
+      log_skip_msg "\n     Gateway already setup; skipping."
    else
       log_info_msg "Setting up default gateway..."
       ip route add default via ${GATEWAY} dev ${IFACE}
