@@ -36,6 +36,16 @@
     </listitem>
 -->
     <listitem>
+      <para>2015-02-22</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Cosmetic changes to output messages
+          by network boot scripts.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2015-02-19</para>
       <itemizedlist>
         <listitem>
