@@ -1,7 +1,7 @@
-<!ENTITY version         "SVN-20150219">
+<!ENTITY version         "SVN-20150222">
 <!ENTITY short-version   "svn">  <!-- Used in dbus chapter, change to x.y for release 
                                       but not -rc releases -->
-<!ENTITY releasedate     "February 19, 2015">
+<!ENTITY releasedate     "February 22, 2015">
 <!ENTITY copyrightdate   "1999-2015"><!-- jhalfs needs a literal dash, not &ndash; -->
 <!ENTITY milestone       "7.7">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
